SUBDIRS = docs src include simplesocketserver tests performance examples
EXTRA_DIST = autogen.sh aclocal.m4 license.apl find_apr.m4 find_apu.m4 build.xml apr-build.xml aprutil-build.xml cppunit-build.xml apr-bug-39848.patch apr-bug-39852.patch apr-bug-39853.patch apr-bug-39856.patch apr-bug-39857.patch apr-bug-39858.patch apr-bug-39859.patch apr-bug-39867.patch apr-bug-39868.patch apr-bug-39869.patch apr-bug-39884.patch apr-bug-39886.patch apr-bug-39888.patch apr-bug-39889.patch apr-bug-39892.patch apr-bug-39895.patch apr-bug-39896.patch
