# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
SUBDIRS = docs src include simplesocketserver tests performance examples
EXTRA_DIST = autogen.sh aclocal.m4 find_apr.m4 find_apu.m4 build.xml apr-build.xml aprutil-build.xml cppunit-build.xml apr-bug-39848.patch apr-bug-39852.patch apr-bug-39853.patch apr-bug-39856.patch apr-bug-39857.patch apr-bug-39858.patch apr-bug-39859.patch apr-bug-39867.patch apr-bug-39868.patch apr-bug-39869.patch apr-bug-39884.patch apr-bug-39886.patch apr-bug-39888.patch apr-bug-39889.patch apr-bug-39892.patch apr-bug-39895.patch apr-bug-39896.patch
